@@ -5,6 +5,9 @@ Release 5.0.9 (unreleased)
 Bug fixes
 ---------
 
+- Fix pressure drop by zone computation (gravity term twice multiplied by
+  density at outlet boundary).
+
 - GUI: fix failure to cleanly stop running computations on some
   systems (Mantis issue #242).
 
